--- a/assets6/css6/style6.css
+++ b/assets6/css6/style6.css
@@ -1,5 +1,8 @@
 body{
 	background: url('../images6/livebands.jpg');
+	background-size: 100%;
+	height: 100%;
+	font-family: 'Rock Salt', cursive;
 }
 
 img{
@@ -9,21 +12,22 @@ img{
 form, .artistBtn{
 	background-color: black;
 	color: orange;
+	text-align: center;
 }
 
 form{
 	padding: 10px;
 	margin: 20px;
-	width: 200px;
+	width: 280px;
 }
 h1{
-	font-size: 15px;
+	font-size: 12px;
 	color: white;
-	margin: 0 0 0 550px;
+	margin: 25px 0 0 520px;
 }
 
 #newArtistInput{
-	color: black;
+	color: orange;
 }
 
 .ratingStyle{
@@ -38,6 +42,7 @@ h1{
 
 input{
 	margin: 10px;
+	text-align: center;
 }
 
 button{
@@ -45,15 +50,15 @@ button{
 	border: none;
 }
 
-#musician{
-	margin: 10px;
-}
+/*#musician{
+	margin: 100px;
+}*/
 
 .artistBtn{
 	padding: 6px;
-	margin: 10px;
+	margin: 20px;
 }
 
 #giphyLogo{
-	margin: 550px;
+	margin: 375px 0 0 550px;
 }
